overflow fix

--- a/src/components/ParallaxText/ParallaxText.css
+++ b/src/components/ParallaxText/ParallaxText.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     background-color: #ee9911;
+    overflow: hidden;
 
     & .scroll-text {
         font-size: 12rem;
